// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`components/search_results/MessagesOrFilesSelector should match snapshot, on files selected 1`] = `
<ContextProvider
  value={
    Object {
      "getServerState": undefined,
      "identityFunctionCheck": "once",
      "stabilityCheck": "once",
      "store": Object {
        "clearActions": [Function],
        "dispatch": [Function],
        "getActions": [Function],
        "getState": [Function],
        "replaceReducer": [Function],
        "subscribe": [Function],
      },
      "subscription": Object {
        "addNestedSub": [Function],
        "getListeners": [Function],
        "handleChangeWrapper": [Function],
        "isSubscribed": [Function],
        "notifyNestedSubs": [Function],
        "trySubscribe": [Function],
        "tryUnsubscribe": [Function],
      },
    }
  }
>
  <MessagesOrFilesSelector
    crossTeamSearchEnabled={false}
    filesCounter="10"
    isFileAttachmentsEnabled={true}
    messagesCounter="5"
    onChange={[MockFunction]}
    onFilter={[MockFunction]}
    onTeamChange={[MockFunction]}
    selected="files"
    selectedFilter="code"
  />
</ContextProvider>
`;

exports[`components/search_results/MessagesOrFilesSelector should match snapshot, on messages selected 1`] = `
<ContextProvider
  value={
    Object {
      "getServerState": undefined,
      "identityFunctionCheck": "once",
      "stabilityCheck": "once",
      "store": Object {
        "clearActions": [Function],
        "dispatch": [Function],
        "getActions": [Function],
        "getState": [Function],
        "replaceReducer": [Function],
        "subscribe": [Function],
      },
      "subscription": Object {
        "addNestedSub": [Function],
        "getListeners": [Function],
        "handleChangeWrapper": [Function],
        "isSubscribed": [Function],
        "notifyNestedSubs": [Function],
        "trySubscribe": [Function],
        "tryUnsubscribe": [Function],
      },
    }
  }
>
  <MessagesOrFilesSelector
    crossTeamSearchEnabled={false}
    filesCounter="10"
    isFileAttachmentsEnabled={true}
    messagesCounter="5"
    onChange={[MockFunction]}
    onFilter={[MockFunction]}
    onTeamChange={[MockFunction]}
    selected="messages"
    selectedFilter="code"
  />
</ContextProvider>
`;

exports[`components/search_results/MessagesOrFilesSelector should match snapshot, without files tab 1`] = `
<ContextProvider
  value={
    Object {
      "getServerState": undefined,
      "identityFunctionCheck": "once",
      "stabilityCheck": "once",
      "store": Object {
        "clearActions": [Function],
        "dispatch": [Function],
        "getActions": [Function],
        "getState": [Function],
        "replaceReducer": [Function],
        "subscribe": [Function],
      },
      "subscription": Object {
        "addNestedSub": [Function],
        "getListeners": [Function],
        "handleChangeWrapper": [Function],
        "isSubscribed": [Function],
        "notifyNestedSubs": [Function],
        "trySubscribe": [Function],
        "tryUnsubscribe": [Function],
      },
    }
  }
>
  <MessagesOrFilesSelector
    crossTeamSearchEnabled={false}
    filesCounter="10"
    isFileAttachmentsEnabled={false}
    messagesCounter="5"
    onChange={[MockFunction]}
    onFilter={[MockFunction]}
    onTeamChange={[MockFunction]}
    selected="files"
    selectedFilter="code"
  />
</ContextProvider>
`;
